--- a/src/Wallabag/CoreBundle/Resources/translations/messages.en.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.en.yml
@@ -304,6 +304,7 @@ entry:
         title_label: Title
         url_label: Url
         origin_url_label: Origin url (from where you found that entry)
+        content_label: Content
         save_label: Save
     public:
         shared_by_wallabag: This article has been shared by %username% with <a href='%wallabag_instance%'>wallabag</a>
