--- a/src/Wallabag/CoreBundle/Resources/translations/messages.fa.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.fa.yml
@@ -174,6 +174,7 @@ entry:
         page_title: ویرایش مقاله
         title_label: عنوان
         url_label: نشانی
+        content_label: محتوا
         save_label: ذخیره
 about:
     page_title: درباره
