--- a/src/Wallabag/CoreBundle/Resources/translations/messages.pl.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.pl.yml
@@ -290,6 +290,7 @@ entry:
         title_label: Tytuł
         url_label: Adres URL
         origin_url_label: Oryginalny url (gdzie znalazłeś ten wpis)
+        content_label: Zawartość
         save_label: Zapisz
     public:
         shared_by_wallabag: Ten artykuł został udostępniony przez <a href='%wallabag_instance%'>wallabag</a>
