--- a/src/Wallabag/CoreBundle/Resources/translations/messages.ro.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.ro.yml
@@ -119,6 +119,7 @@ entry:
             url_label: Url
     edit:
         url_label: 'Url'
+        content_label: 'Conţinut'
         save_label: 'Salvează'
 about:
     page_title: 'Despre'
